Use more mintlify components

--- a/development.mdx
+++ b/development.mdx
@@ -5,40 +5,46 @@ description: 'Preview changes locally to update your docs'
 
 <Info>
   **Prerequisite**: Please install Node.js (version 19 or higher) before proceeding. <br />
-  Please upgrade to ```docs.json``` before proceeding and delete the legacy ```mint.json``` file.
+  Please upgrade to `docs.json` before proceeding and delete the legacy `mint.json` file.
 </Info>
 
 Follow these steps to install and run Mintlify on your operating system:
 
-**Step 1**: Install Mintlify:
+<Steps>
+  <Step title="Install Mintlify">
+    <CodeGroup>
+      ```bash npm
+      npm i -g mintlify
+      ```
 
-<CodeGroup>
+      ```bash yarn
+      yarn global add mintlify
+      ```
+    </CodeGroup>
+  </Step>
 
-  ```bash npm
-  npm i -g mintlify
-  ```
+  <Step title="Navigate and run">
+    Navigate to the docs directory (where the `docs.json` file is located) and execute the following command:
 
-```bash yarn
-yarn global add mintlify
-```
+    <CodeGroup>
+      ```bash
+      mintlify dev
+      ```
+    </CodeGroup>
 
-</CodeGroup>
-
-**Step 2**: Navigate to the docs directory (where the `docs.json` file is located) and execute the following command:
-
-```bash
-mintlify dev
-```
-
-A local preview of your documentation will be available at `http://localhost:3000`.
+    A local preview of your documentation will be available at `http://localhost:3000`.
+  </Step>
+</Steps>
 
 ### Custom Ports
 
 By default, Mintlify uses port 3000. You can customize the port Mintlify runs on by using the `--port` flag. To run Mintlify on port 3333, for instance, use this command:
 
+<CodeGroup>
 ```bash
 mintlify dev --port 3333
 ```
+</CodeGroup>
 
 If you attempt to run Mintlify on a port that's already in use, it will use the next available port:
 
@@ -51,7 +57,6 @@ Port 3000 is already in use. Trying 3001 instead.
 Please note that each CLI release is associated with a specific version of Mintlify. If your local website doesn't align with the production version, please update the CLI:
 
 <CodeGroup>
-
 ```bash npm
 npm i -g mintlify@latest
 ```
@@ -59,22 +64,22 @@ npm i -g mintlify@latest
 ```bash yarn
 yarn global upgrade mintlify
 ```
-
 </CodeGroup>
 
 ## Validating Links
 
 The CLI can assist with validating reference links made in your documentation. To identify any broken links, use the following command:
 
+<CodeGroup>
 ```bash
 mintlify broken-links
 ```
+</CodeGroup>
 
 ## Deployment
 
 <Tip>
-  Unlimited editors available under the [Pro
-  Plan](https://mintlify.com/pricing) and above.
+  Unlimited editors available under the [Pro Plan](https://mintlify.com/pricing) and above.
 </Tip>
 
 If the deployment is successful, you should see the following:
@@ -91,16 +96,31 @@ We suggest using extensions on your IDE to recognize and format MDX. If you're a
 
 <AccordionGroup>
   <Accordion title='Error: Could not load the "sharp" module using the darwin-arm64 runtime'>
-
     This may be due to an outdated version of node. Try the following:
-    1. Remove the currently-installed version of mintlify: `npm remove -g mintlify`
-    2. Upgrade to Node v19 or higher.
-    3. Reinstall mintlify: `npm install -g mintlify`
+
+    <Steps>
+      <Step title="Remove mintlify">
+        <CodeGroup>
+        ```bash
+        npm remove -g mintlify
+        ```
+        </CodeGroup>
+      </Step>
+      <Step title="Upgrade Node">
+        Upgrade to Node v19 or higher.
+      </Step>
+      <Step title="Reinstall mintlify">
+        <CodeGroup>
+        ```bash
+        npm install -g mintlify
+        ```
+        </CodeGroup>
+      </Step>
+    </Steps>
   </Accordion>
 
   <Accordion title="Issue: Encountering an unknown error">
-  
-    Solution: Go to the root of your device and delete the \~/.mintlify folder. Afterwards, run `mintlify dev` again.
+    Solution: Go to the root of your device and delete the `~/.mintlify` folder. Afterwards, run `mintlify dev` again.
   </Accordion>
 </AccordionGroup>
 
