--- a/guides/using-transform-data.mdx
+++ b/guides/using-transform-data.mdx
@@ -1,9 +1,9 @@
 ---
 title: "AI editing with user transformations"
-description: "Dromo's Transform Data feature allows your users to create bulk transformations from natural language and execute them on the dataset. The feature is available on the ."
+description: "Dromo's Transform Data feature allows your users to create bulk transformations from natural language and execute them on the dataset. The feature is available on the Pro plan."
 ---
 
-### Overview[​](#overview "Direct link to Overview")
+## Overview
 
 <Check>
   Enable Transform Data with the [`reviewStep.enableUserTransformations` setting](/settings#enableusertransformations).
@@ -25,9 +25,9 @@ The feature can edit values and remove rows. It cannot add rows.
 
 ![Remove low value rows](\images\guides\assets\images\remove-cheap-rows-642eae7e803ed76db1c3976aeeee5f2f.png)
 
-### Best Practices[​](#best-practices "Direct link to Best Practices")
+## Best Practices
 
-#### Include context about inputs[​](#include-context-about-inputs "Direct link to Include context about inputs")
+### Include context about inputs
 
 The AI building the transformation function never has access to the import data, so including context about both the input and output is often helpful.
 
@@ -35,16 +35,16 @@ For example, given a column containing dates formatted like "Jul-8-1999" where y
 
 ![date-example](\images\guides\assets\images\date-format-88bf2c972ebfc224d812c5aeaa49aff0.png)
 
-#### Only apply transformations to one row at a time[​](#only-apply-transformations-to-one-row-at-a-time "Direct link to Only apply transformations to one row at a time")
+### Only apply transformations to one row at a time
 
 A transformation only has access to an individual row. If you need to perform an operation that requires knowledge of other rows or information outside of the table, the transformation will not succeed.
 
 ![failed prompt](\images\guides\assets\images\failed-prompt-b2c6c567a3f43d3b49faae09b2e8141a.png)
 
-#### Keep Expectations Realistic[​](#keep-expectations-realistic "Direct link to Keep Expectations Realistic")
+### Keep Expectations Realistic
 
 Transform data performs best when it is given a simple, well-scoped task. Changing values based on simple criteria, adjusting date and time formats, and removing rows based on simple conditions are all great uses for the transform data feature.
 
-### Privacy[​](#privacy "Direct link to Privacy")
+## Privacy
 
 Dromo sends the request to OpenAI along with some information about the schema, but absolutely no user data is transmitted as part of this process.
