--- a/guides/zapier-integration.mdx
+++ b/guides/zapier-integration.mdx
@@ -1,9 +1,9 @@
 ---
 title: "Zapier integration"
-description: "Dromo's  integration allows you to connect your imports with thousands of web services with a few mouse clicks. You can enable email or Slack notifications for new imports, copy import results to Google Drive, or automatically add imported records to your CRM, to name a few."
+description: "Dromo's Zapier integration allows you to connect your imports with thousands of web services with a few mouse clicks. You can enable email or Slack notifications for new imports, copy import results to Google Drive, or automatically add imported records to your CRM, to name a few."
 ---
 
-### How to Use Zapier with Dromo[​](#how-to-use-zapier-with-dromo "Direct link to How to Use Zapier with Dromo")
+## How to Use Zapier with Dromo
 
 You can create [Zaps](https://help.zapier.com/hc/en-us/articles/8496309697421-Create-Zaps) to perform actions based on Dromo triggers.
 
@@ -13,7 +13,7 @@ Dromo offers two event triggers: "New Results File" and "New Data Row Imported".
 
 "New Data Row Imported" will trigger for every individual row in an import. This trigger is useful when adding data directly to an existing database like a spreadsheet or CRM.
 
-### Dromo Zap Templates[​](#dromo-zap-templates "Direct link to Dromo Zap Templates")
+## Dromo Zap Templates
 
 You can manually [create a new Zap](https://zapier.com/resources/guides/quick-start/create-zap) or use one of Dromo's pre-configured Zap templates. These are available from the integrations menu in the Schema Editor.
 
@@ -21,7 +21,7 @@ You can manually [create a new Zap](https://zapier.com/resources/guides/quick-st
 
 If you manually create a Zap, you can add a Dromo trigger by searching for the "Dromo" app in the menu. Once you've selected the Dromo app, you can choose the event to subscribe to.
 
-### Step by Step Example: Dromo Slack Notifications[​](#step-by-step-example-dromo-slack-notifications "Direct link to Step by Step Example: Dromo Slack Notifications")
+## Step by Step Example: Dromo Slack Notifications
 
 In this example, we will configure Zapier to send us a Slack message each time a new import is completed.
 
