--- a/index.mdx
+++ b/index.mdx
@@ -1,23 +1,46 @@
 ---
-title: "Basic Concepts"
+title: "Welcome to Dromo"
+description: "The intuitive spreadsheet importer that seamlessly integrates with your product"
 icon: "rocket"
 ---
 
-Dromo is an easy and intuitive spreadsheet importer that integrates seamlessly with your product. Dromo helps your users match columns, correct errors, perform complex validations, tranform values, and upload perfectly formatted data.
+<img
+  className="block dark:hidden"
+  src="/images/hero-light.png"
+  alt="Hero Light"
+/>
+<img
+  className="hidden dark:block"
+  src="/images/hero-dark.png"
+  alt="Hero Dark"
+/>
 
-Check out a [live demo](https://demo.dromo.io) to try it yourself with realistic data!
+Dromo is an easy and intuitive spreadsheet importer that integrates seamlessly with your product. Dromo helps your users match columns, correct errors, perform complex validations, transform values, and upload perfectly formatted data.
 
-## Quickstart[​](#quickstart "Direct link to Quickstart")
+<Card title="🚀 Try Our Live Demo" icon="play" href="https://demo.dromo.io">
+  Experience Dromo with realistic data and see how easy data importing can be
+</Card>
 
-If you want to jump straight into getting Dromo into your app, you can head to one of these quickstart guides. Choose the SDK that works best for you:
+## Quick Start
 
-- [Vanilla JavaScript](/getting-started/javascript) (universal)
-- [React](/getting-started/react)
-- [Angular](/getting-started/angular)
+Get up and running with Dromo in minutes. Choose the integration that works best for your stack:
 
-Or if you want to create a no-code schema in the Dromo Dashboard, head over to the [Schema Studio guide](/guides/schema-builder).
+<CardGroup cols={2}>
+  <Card title="JavaScript SDK" icon="js" href="/getting-started/javascript">
+    Universal JavaScript implementation for any web application
+  </Card>
+  <Card title="React Component" icon="react" href="/getting-started/react">
+    Pre-built React component with TypeScript support
+  </Card>
+  <Card title="Angular Component" icon="angular" href="/getting-started/angular">
+    Native Angular implementation with full type safety
+  </Card>
+  <Card title="Schema Builder" icon="wrench" href="/guides/schema-builder">
+    No-code schema creation in the Dromo Dashboard
+  </Card>
+</CardGroup>
 
-## Dromo in 1 Minute
+## See Dromo in Action
 
 <iframe
   src="https://drive.google.com/file/d/1dv39s4HZ88U9uI7PVARHet4T9z6qjf_1/preview"
@@ -26,52 +49,77 @@ Or if you want to create a no-code schema in the Dromo Dashboard, head over to t
   allow="autoplay"
 ></iframe>
 
-## Basic Set Up[​](#basic-set-up "Direct link to Basic Set Up")
+## How Dromo Works
 
-There are two ways to set up a Dromo importer: using the [Schema Builder](/guides/schema-builder) or using one of Dromo's SDKs to define your importer in code.
+<Steps>
+  <Step title="Define Your Schema">
+    Specify the fields you want to import using our [Schema Builder](/guides/schema-builder) or define them programmatically with our SDKs.
+  </Step>
+  <Step title="Add Validations">
+    Configure [validation rules](/fields) and [transformation hooks](/hooks) to ensure data quality and provide real-time feedback.
+  </Step>
+  <Step title="Handle Results">
+    Receive clean, validated JSON data that's ready to use in your application or database.
+  </Step>
+  <Step title="Customize Experience">
+    Brand the importer to match your application with custom styling and user experience settings.
+  </Step>
+</Steps>
 
-The Schema Studio is a no-code option that allows you to quickly configure an importer and add it to your application.
+## What You Need to Get Started
 
-Defining the importer in code allows for full control of all settings, enabling you to leverage all of Dromo's powerful features. This [interactive sandbox](https://codesandbox.io/s/ux-demo-react-yez5e2) is a great example of a fully customized Dromo instance.
+<AccordionGroup>
+  <Accordion title="Free License Key">
+    Get started immediately with a free license key by [registering for an account](https://dashboard.dromo.io/auth/registration). No payment information required.
+  </Accordion>
+  <Accordion title="JavaScript Environment">
+    Dromo works with any JavaScript application or HTML page where you want users to import data.
+  </Accordion>
+  <Accordion title="Supported File Types">
+    Import CSV, TSV, XLS, XLSX, XML, or JSON files directly into your application.
+  </Accordion>
+</AccordionGroup>
 
-Now you know what Dromo is, let's cover some basics. If you have any questions, you can chat with us any time by clicking on the chat bubble, or email us at [contact@dromo.io](mailto:contact@dromo.io).
+## Key Features
 
-## Prerequisites[​](#prerequisites "Direct link to Prerequisites")
+<CardGroup cols={3}>
+  <Card title="Smart Column Matching" icon="arrows-turn-to-dots">
+    Intelligent algorithms help users map their columns to your schema
+  </Card>
+  <Card title="Real-time Validation" icon="shield-check">
+    Catch and fix errors before data enters your system
+  </Card>
+  <Card title="Data Transformation" icon="wand-magic-sparkles">
+    Clean and format data automatically with custom hooks
+  </Card>
+  <Card title="White-label Ready" icon="palette">
+    Fully customizable to match your brand and user experience
+  </Card>
+  <Card title="Enterprise Security" icon="lock">
+    SOC 2 compliant with enterprise-grade security features
+  </Card>
+  <Card title="Developer Friendly" icon="code">
+    Comprehensive APIs and SDKs for complete integration control
+  </Card>
+</CardGroup>
 
-Whether you define the importer in code or use the Schema Studio, you'll be embedding Dromo in your application with a JavaScript snippet. Before you can do this, you'll need a few things:
+## Next Steps
 
-- You will need a free **license key**. You can get a license key by [registering for an account](https://dashboard.dromo.io/auth/registration). No payment information is necessary to get started.
-- You will need a place in your JavaScript application or HTML page where you want the importer to be accessed.
-
-## Supported file types[​](#supported-file-types "Direct link to Supported file types")
-
-You can use Dromo to import CSV, TSV, XLS, XLSX, XML, or JSON files directly into your application or database.
-
-## The Basics of Dromo[​](#the-basics-of-dromo "Direct link to The basics of Dromo")
-
-There are 4 parts of a Dromo implementation:
-
-1. Defining a schema
-2. Adding validations and transformations
-3. Handling the result
-4. Customizing the experience
+<CardGroup cols={2}>
+  <Card title="Interactive Sandbox" icon="laptop-code" href="https://codesandbox.io/s/ux-demo-react-yez5e2">
+    Explore a fully customized Dromo implementation
+  </Card>
+  <Card title="API Documentation" icon="book-open" href="/api-reference">
+    Dive into our comprehensive API reference
+  </Card>
+  <Card title="Join Community" icon="users" href="https://discord.gg/dromo">
+    Connect with other developers building with Dromo
+  </Card>
+  <Card title="Get Help" icon="life-ring" href="mailto:contact@dromo.io">
+    Our team is here to help you succeed
+  </Card>
+</CardGroup>
 
 <Note>
-  For examples of things you can do in each step, see the Guides in the sidebar.
+  **Questions?** Chat with us anytime using the chat bubble, join our [Discord community](https://discord.gg/dromo), or email us at [contact@dromo.io](mailto:contact@dromo.io).
 </Note>
-
-### Defining a schema[​](#defining-a-schema "Direct link to Defining a schema")
-
-To implement Dromo in your application, you must first define a schema. A schema is a list of [fields](/fields) that you want to import. These fields will be matched to columns during the import process, and define the properties of the JSON payload passed back in the results.
-
-### Adding validations and transformations[​](#adding-validations-and-transformations "Direct link to Adding validations and transformations")
-
-With your schema defined, you can add [validation rules](/fields) and [data transformation hooks](/hooks) to exactly match the import process to match your data requirements and provide interactive feedback to users during the import process.
-
-### Handling the result[​](#handling-the-result "Direct link to Handling the result")
-
-After an import is submitted, you will have access to a JSON payload of clean results. You can handle this data [directly in the frontend](/results), or fetch it from storage via [our REST API](/api).
-
-### Customizing the experience[​](#customizing-the-experience "Direct link to Customizing the experience")
-
-Dromo is white-label by default, so you can tailor the styling to match your brand. You can craft unique help text, configure the column matching process, regulate user behavior, and vary other [settings](/settings) to suit your requirements.
